@@ -94,10 +94,15 @@ extern "C" {
 #ifdef _WIN64
   _CRTIMP FILE *__cdecl __iob_func(void);
 #else
+#ifdef _MSVCRT_
+extern FILE _iob[];	/* A pointer to an array of FILE */
+#define __iob_func()	(_iob)
+#else
 extern FILE (*_imp___iob)[];	/* A pointer to an array of FILE */
 #define __iob_func()	(*_imp___iob)
-#endif
 #define _iob __iob_func()
+#endif
+#endif
 #endif
 
 #ifndef _FPOS_T_DEFINED
