@@ -50,9 +50,16 @@ extern "C" {
 #ifdef _WIN64
   _CRTIMP FILE *__cdecl __iob_func(void);
 #else
+#ifdef _MSVCRT_
+extern FILE _iob[];	/* A pointer to an array of FILE */
+#define __iob_func()	(_iob)
+#else
 extern FILE (*_imp___iob)[];	/* A pointer to an array of FILE */
 #define __iob_func()	(*_imp___iob)
+#define _iob __iob_func()
 #endif
+#endif
+
 #define _iob __iob_func()
 #endif
 
@@ -148,12 +155,20 @@ extern FILE (*_imp___iob)[];	/* A pointer to an array of FILE */
 
 #ifndef __PCTYPE_FUNC
 #define __PCTYPE_FUNC __pctype_func()
+#ifdef _MSVCRT_
+#define __pctype_func() (_pctype)
+#else
 #define __pctype_func() (*_imp___pctype)
+#endif
 #endif
 
 #ifndef _pctype
+#ifdef _MSVCRT_
+  extern unsigned short *_pctype;
+#else
   extern unsigned short **_imp___pctype;
 #define _pctype (*_imp___pctype)
+#endif
 #endif
 #endif
 #endif
@@ -162,15 +177,27 @@ extern FILE (*_imp___iob)[];	/* A pointer to an array of FILE */
 #define _CRT_WCTYPEDATA_DEFINED
 #ifndef _CTYPE_DISABLE_MACROS
 #ifndef _wctype
+#ifdef _MSVCRT_
+  extern unsigned short *_wctype;
+#else
   extern unsigned short **_imp___wctype;
 #define _wctype (*_imp___wctype)
 #endif
+#endif
 
+#ifdef _MSVCRT_
+#define __pwctype_func() (_pwctype)
+#else
 #define __pwctype_func() (*_imp___pwctype)
+#endif
 
 #ifndef _pwctype
+#ifdef _MSVCRT_
+  extern unsigned short *_pwctype;
+#else
   extern unsigned short **_imp___pwctype;
 #define _pwctype (*_imp___pwctype)
+#endif
 #endif
 
 #endif
